# receipt-parser

./: .gitignore  Agent.md  README.md  format.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
api/: config.py  jobs.py  logging.py  main.py  metrics.py  openapi.yaml  storage.py
frontend/: index.html  main.js  script.js  style.css  test.html  test.js
receipt_reader/: __init__.py  parser.py  types.py
tests/: conftest.py  fixtures_data.py  jacques.json  parser_stubs.py  rewe.json  rewe2.json  tegut.json  test_api.py  test_lazy_load.py  test_math_properties.py  test_metrics.py  test_parser_contract.py  test_parser_integration.py  test_roundtrip_json.py  test_schema_and_fixtures.py  toom.json
