[tool.poetry]
name = "receipt-parser"
version = "0.0.0"
description = "Receipt parsing helpers and fixtures for tests"
authors = ["Anonymous <anonymous@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = "*"
transformers = "*"
Pillow = "*"
pydantic = "^1.10"
sentencepiece = "*"
protobuf = "*"
fastapi = "*"
uvicorn = "*"
python-multipart = "*"
pytest = "^9.0.1"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)"
]
