[tool.poetry]
name = "receipt-parser"
version = "0.0.0"
description = "Receipt parsing helpers and fixtures for tests"
authors = ["Jan <jan@example.com>"]
packages = [{include = "receipt_reader"}, {include = "api"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Pillow = "*"
pydantic = "^1.10"
sentencepiece = "*"
protobuf = "*"
fastapi = "*"
uvicorn = "*"
python-multipart = "*"
prometheus-fastapi-instrumentator = "*"
structlog = "*"
opentelemetry-distro = "*"
opentelemetry-instrumentation-fastapi = "*"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.10.0"
httpx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.model.dependencies]
torch = "*"
transformers = "*"


